# http-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_debpkg.sh  http-server-dcsa.deb  test.sh
.github/workflows/: actions.yml  c-cpp.yml
_contrib/: CMakeLists.txt
_contrib/libhv-cmake/: CMakeLists.txt
contrib/libhv-cmake/: CMakeLists.txt
src/: Router.cpp  Router.hpp  Server.cpp  Server.hpp  Storage.cpp  Storage.hpp  User.cpp  User.hpp  main.cpp
src/auth/: BasicAuth.cpp  BasicAuth.hpp  base64.cpp  base64.hpp
tests/: test.cpp
tests/requests/: request.cpp  request.hpp
testsData/: patchFromRoot.json  patchFromU1.json  user1.json  user2.json
